--- a/Website Code on SD Card/index.html
+++ b/Website Code on SD Card/index.html
@@ -511,6 +511,12 @@
                 </form>
                 <br>
                 <form action="/form-submit" method="POST" target="target">
+                    <label>Autotune Initial Kp:</label>
+                    <input type="number" step="0.01" name="Pa2" id="bio-pro-gauge2-amount">
+                    <button onclick="">Push Data</button>    
+                </form>
+                <br>
+                <form action="/form-submit" method="POST" target="target">
                     <label>Kp:</label>
                     <input type="number" step="0.01" name="Pp2" id="bio-pro-gauge2-kp">
                     <br>
